tests/baselines/reference/scopeCheckInsidePublicMethod1(strict=true).errors.txt
scopeCheckInsidePublicMethod1.ts(2,11): error TS7008: Member 's' implicitly has an 'any' type.
scopeCheckInsidePublicMethod1.ts(4,7): error TS2662: Cannot find name 's'. Did you mean the static member 'C.s'?


==== scopeCheckInsidePublicMethod1.ts (2 errors) ====
    class C {
       static s;
              ~
!!! error TS7008: Member 's' implicitly has an 'any' type.
       public a() {
          s = 1; // ERR
          ~
!!! error TS2662: Cannot find name 's'. Did you mean the static member 'C.s'?
       }
    }